@@ -382,15 +382,13 @@ static void geda_separator_class_init(void *class, void *class_data)
 static void geda_separator_instance_init(GTypeInstance *instance, void *g_class)
 {
   GedaSeparator  *separator;
-  GtkWidget      *widget;
   GtkStyle       *style;
   GtkRequisition *requisition;
 
   separator   = (GedaSeparator*)instance;
-  widget      = (GtkWidget*)instance;
 
-  requisition = geda_get_widget_requisition(widget);
-  style       = geda_get_widget_style (widget);
+  requisition = geda_get_widget_requisition(instance);
+  style       = geda_get_widget_style (instance);
 
   gtk_widget_set_has_window ((GtkWidget*)instance, FALSE);
 
