@@ -1,3 +1,8 @@
+2020-07-09 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_separator.c: Eliminate ancillary GtkWidget in
+      function geda_separator_instance_init.
+
 2020-07-08 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_combobox.c: Replace GTK_LIST_STORE dynamic cast
